force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Accrual_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Accrual_Type__c</fullName>
    <description>Indicates how the leave accrual has been calculated.</description>
    <inlineHelpText>Indicates how the leave accrual has been calculated.</inlineHelpText>
    <label>Accrual Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed per Period</fullName>
            </value>
            <value>
                <fullName>Leave Grant</fullName>
            </value>
            <value>
                <fullName>Units per Hour Worked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>