force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Additional_Interpretation_BP_Details__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Additional_Interpretation_BP_Details__c</fullName>
    <description>Additional information from the breakpoint during interpretation</description>
    <inlineHelpText>Additional information from the breakpoint during interpretation</inlineHelpText>
    <label>Additional Interpretation BP Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Additional_Interpretation_BP_Details</valueSetName>
    </valueSet>
</CustomField>