force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Adjustment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Adjustment_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Pay Transaction has been created through a manual/adjustment process</description>
    <inlineHelpText>Identifies if the Pay Transaction has been created through a manual/adjustment process</inlineHelpText>
    <label>Adjustment Transaction</label>
    <type>Checkbox</type>
</CustomField>