force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Assignment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Assignment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Assignment Schedule record, where Work Schedules have been implemented.</description>
    <inlineHelpText>The related Assignment Schedule record, where Work Schedules have been implemented.</inlineHelpText>
    <label>Assignment Schedule</label>
    <referenceTo>tc9_pr__Assignment_Schedule__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>