force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__ATO_Income_Classification__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ATO_Income_Classification__c</fullName>
    <description>The relevant ATO Income Classification as derived from the related Payee Pay Batch record or picklist value in the Override ATO Income Classification field.</description>
    <formula>If ( NOT(ISBLANK(TEXT(tc9_pr__Override_ATO_Income_Classification__c))) ,  TEXT(tc9_pr__Override_ATO_Income_Classification__c) , TEXT(tc9_pr__Pay_Batch_Item__r.tc9_pr__ATO_Income_Classification__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The relevant ATO Income Classification as derived from the related Payee Pay Batch record or picklist value in the Override ATO Income Classification field.</inlineHelpText>
    <label>ATO Income Classification</label>
    <type>Text</type>
</CustomField>