force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Auto_Generated_Back_Pay__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Auto_Generated_Back_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this is an auto generated back pay transaction.</description>
    <inlineHelpText>Indicates that this is an auto generated back pay transaction.</inlineHelpText>
    <label>Auto Generated Back Pay</label>
    <type>Checkbox</type>
</CustomField>