force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Calendar_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Pay Calendar Period that applies to the Pay Batch Event. The value is automatically updated with the respective Pay Calendar Period based on the Entry Date and the related Pay schedule</description>
    <inlineHelpText>Defines the Pay Calendar Period that applies to the Pay Batch Event. The value is automatically updated with the respective Pay Calendar Period based on the Entry Date and the related Pay schedule</inlineHelpText>
    <label>Pay Calendar Period</label>
    <referenceTo>tc9_pr__Calendar_Period__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>