force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Client__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related client</description>
    <inlineHelpText>The related client</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>