force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Contractor_GST__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Contractor_GST__c</fullName>
    <description>The value of contractor GST calculated during payrun</description>
    <inlineHelpText>The value of contractor GST calculated during payrun</inlineHelpText>
    <label>Contractor GST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>