force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Contributes_to_OTE__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Contributes_to_OTE__c</fullName>
    <description>Indicates if the Pay Transaction Contributes to OTE as per the related Pay Code</description>
    <formula>If (  AND ( tc9_pr__Pay_Code__r.RecordType.DeveloperName != &apos;Deduction&apos; , tc9_pr__Pay_Code__r.tc9_pr__Contributes_to_OTE__c = true ), true , 
If ( AND ( tc9_pr__Pay_Code__r.RecordType.DeveloperName = &apos;Deduction&apos; , TEXT ( tc9_pr__Pay_Code__r.tc9_pr__SGC_Calculation_Impact__c ) != null , TEXT ( tc9_pr__Pay_Code__r.tc9_pr__SGC_Calculation_Impact__c ) != &apos;No Impact&apos; ) , true , 
false ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the Pay Transaction Contributes to OTE as per the related Pay Code</inlineHelpText>
    <label>Contributes to OTE</label>
    <type>Checkbox</type>
</CustomField>