force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Contributes_to_Qualifying_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Contributes_to_Qualifying_Earnings__c</fullName>
    <description>Indicates if the Pay Transaction Contributes to Qualifying Earnings as per the related Pay Code</description>
    <formula>IF(
AND(
tc9_pr__Pay_Code__r.RecordType.DeveloperName != &apos;Deduction&apos;,
tc9_pr__Pay_Code__r.tc9_pr__Contributes_to_Qualifying_Earnings__c = true
),
true,
IF(
AND(
tc9_pr__Pay_Code__r.RecordType.DeveloperName = &apos;Deduction&apos;,
tc9_pr__Pay_Code__r.tc9_pr__Deduction_Reduces_Qualifying_Earnings__c = true
),
true,
false
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the Pay Transaction Contributes to Qualifying Earnings as per the related Pay Code</inlineHelpText>
    <label>Contributes to Qualifying Earnings</label>
    <type>Checkbox</type>
</CustomField>