force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Deduction_Applied__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Deduction_Applied__c</fullName>
    <description>The point during payrun calculation where this deduction was calculated</description>
    <inlineHelpText>The point during payrun calculation where this deduction was calculated</inlineHelpText>
    <label>Deduction Applied</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pre-tax</fullName>
            </value>
            <value>
                <fullName>post tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>