force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Deduction_Shortfall_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Deduction_Shortfall_Amount__c</fullName>
    <description>The amount of a deduction calculation that could not be taken</description>
    <inlineHelpText>The amount of a deduction calculation that could not be taken</inlineHelpText>
    <label>Deduction Shortfall Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>