force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Description__c</fullName>
    <description>A text based description of this Pay Transaction record.</description>
    <inlineHelpText>A text based description of this Pay Transaction record.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>