force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related employee</description>
    <inlineHelpText>The related employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pay Transactions (Contact)</relationshipLabel>
    <relationshipName>Pay_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>