force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Entry_Date__c</fullName>
    <description>The work date of this Pay Transaction.</description>
    <inlineHelpText>The work date of this Pay Transaction.</inlineHelpText>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>