force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Estimated_Payroll_Tax_on_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Estimated_Payroll_Tax_on_Earnings__c</fullName>
    <description>Defines the estimated Payroll Tax amount that will be applied to the Pay Transaction</description>
    <formula>tc9_pr__Estimated_Payroll_Tax_on_Earnings_Unit__c * tc9_pr__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the estimated Payroll Tax amount that will be applied to the Pay Transaction</inlineHelpText>
    <label>Estimated Payroll Tax on Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>