force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Estimated_Payroll_Tax_on_Earnings_Unit__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Estimated_Payroll_Tax_on_Earnings_Unit__c</fullName>
    <description>Defines the estimated Payroll Tax amount per unit that will be applied to the Pay Rate.</description>
    <formula>If ( 
     OR(
           RecordType.DeveloperName = &quot;Payment&quot;,
           RecordType.DeveloperName = &quot;Allowance&quot;
           ),
      If( 
           tc9_pr__Payroll_Tax_Exempt__c,
           0,
           tc9_pr__Assignment_Rate__r.tc9_pr__Estimated_Payroll_Tax_on_Earnings__c * tc9_pr__Pay_Multiplier__c
         ),
      0
     )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the estimated Payroll Tax amount per unit that will be applied to the Pay Rate.</inlineHelpText>
    <label>Estimated Payroll Tax on Earnings Unit</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>