force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Estimated_WorkCover_on_Super__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Estimated_WorkCover_on_Super__c</fullName>
    <description>Defines the estimated WorkCover amount that will be applied to the Superannuation for the Pay Transaction.</description>
    <formula>tc9_pr__Estimated_WorkCover_on_Super_Unit__c * tc9_pr__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the estimated WorkCover amount that will be applied to the Superannuation for the Pay Transaction.</inlineHelpText>
    <label>Estimated WorkCover on Super</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>