force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Estimated_WorkCover_on_Super_Unit__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Estimated_WorkCover_on_Super_Unit__c</fullName>
    <description>Defines the estimated WorkCover amount per unit that will be applied to the Superannuation for the Pay Rate</description>
    <formula>If ( 
   OR(
      RecordType.DeveloperName = &quot;Payment&quot;,
      RecordType.DeveloperName = &quot;Allowance&quot;
      ),
   If( 
      OR(
         tc9_pr__WorkCover_Exempt__c,
         tc9_pr__Contributes_to_OTE__c = FALSE
         ),
      0,
      tc9_pr__Assignment_Rate__r.tc9_pr__Estimated_WorkCover_on_Super__c * tc9_pr__Pay_Multiplier__c
      ),
   0
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the estimated WorkCover amount per unit that will be applied to the Superannuation for the Pay Rate</inlineHelpText>
    <label>Estimated WorkCover on Super Unit</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>