force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__ETP_PAYG_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ETP_PAYG_Type__c</fullName>
    <description>The ETP Type this ETP PAYG Transaction is related to.</description>
    <inlineHelpText>The ETP Type this ETP PAYG Transaction is related to.</inlineHelpText>
    <label>ETP PAYG Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__ETP_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>