force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Excess_SGC_Refund__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Excess_SGC_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this pay transaction is the refund of superannuation amount calculated above the maximum contribution base</description>
    <inlineHelpText>Indicates that this pay transaction is the refund of superannuation amount calculated above the maximum contribution base</inlineHelpText>
    <label>Excess SGC Refund</label>
    <type>Checkbox</type>
</CustomField>