force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Exclude_From_Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exclude_From_Pay_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Pay Transaction will be excluded during pay batch creation or bulk add processes.</description>
    <inlineHelpText>Indicates that this Pay Transaction will be excluded during pay batch creation or bulk add processes.</inlineHelpText>
    <label>Exclude From Pay Batch</label>
    <type>Checkbox</type>
</CustomField>