force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Funding_Requirement__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Funding_Requirement__c</fullName>
    <description>Indicates funding requirements at a Pay Transaction level</description>
    <inlineHelpText>Indicates funding requirements at a Pay Transaction level</inlineHelpText>
    <label>Funding_Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Funding_Requirements_Picklist</valueSetName>
    </valueSet>
</CustomField>