force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Funding_Requirement_Override__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Funding_Requirement_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates funding requirements have been overridden on the Pay Transaction to allow Employee payment</description>
    <inlineHelpText>Indicates funding requirements have been overridden on the Pay Transaction to allow Employee payment</inlineHelpText>
    <label>Funding Requirement Override</label>
    <type>Checkbox</type>
</CustomField>