force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__HELP__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__HELP__c</fullName>
    <description>The total amount of HELP withheld</description>
    <inlineHelpText>The total amount of HELP withheld</inlineHelpText>
    <label>HELP</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>