force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Invoice_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Invoice_Creation_Status__c</fullName>
    <description>Indicates if any required invoices for the Pay Transaction have been raised</description>
    <inlineHelpText>Indicates if any required invoices for the Pay Transaction have been raised</inlineHelpText>
    <label>Invoice Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>