force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Invoice_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Invoice_Payment_Status__c</fullName>
    <description>Indicates if any associated invoices for the Pay Transaction have been paid</description>
    <inlineHelpText>Indicates if any associated invoices for the Pay Transaction have been paid</inlineHelpText>
    <label>Invoice Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Invoiced</fullName>
                <default>true</default>
                <label>Not Invoiced</label>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>