force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Is_PAYG_Payable__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Is_PAYG_Payable__c</fullName>
    <description>Identifies in PAYG is payable for the Pay Transaction</description>
    <formula>If( 
Or( 
text(tc9_pr__PAYG_Tax_Payable_for_Pay_Code__c) = &apos;No&apos;, 
text(tc9_pr__PAYG_Tax_Payable_for_Payee__c) = &apos;No&apos; 
), 
&apos;No&apos;, 
&apos;Yes&apos; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies in PAYG is payable for the Pay Transaction</inlineHelpText>
    <label>Is PAYG Payable?</label>
    <type>Text</type>
</CustomField>