force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Is_Rolled_Over_Withheld__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Is_Rolled_Over_Withheld__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Pay Transaction is relating to the withholding of a previously rolled over deduction amount that could not be withheld</description>
    <inlineHelpText>Identifies if the Pay Transaction is relating to the withholding of a previously rolled over deduction amount that could not be withheld</inlineHelpText>
    <label>Is Rolled Over Withheld?</label>
    <type>Checkbox</type>
</CustomField>