force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Leave_Accrual__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Accrual__c</fullName>
    <description>The accrual value of the Payee Leave Rule based on the applicable pay transactions that accrue leave</description>
    <inlineHelpText>The accrual value of the Payee Leave Rule based on the applicable pay transactions that accrue leave</inlineHelpText>
    <label>Leave Accrual</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>