force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Leave_Liability_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Liability_Rate__c</fullName>
    <description>Hourly rate to be used for calculation of leave liability within leave accrual pay transactions.</description>
    <inlineHelpText>Hourly rate to be used for calculation of leave liability within leave accrual pay transactions.</inlineHelpText>
    <label>Leave Liability Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>