force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Leave_Liability_Total__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Liability_Total__c</fullName>
    <description>The calculated value of Leave Liability for the accrued leave</description>
    <formula>If(  RecordType.DeveloperName = &apos;Leave_Accrual&apos; , tc9_pr__Leave_Accrual__c * tc9_pr__Leave_Liability_Rate__c , null )</formula>
    <inlineHelpText>The calculated value of Leave Liability for the accrued leave</inlineHelpText>
    <label>Leave Liability Total</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>