force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Leave_Rate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Rate_Multiplier__c</fullName>
    <description>Indicates the multiplier required as indicated on the Payee Leave Event i.e. Half Pay Rate = 0.5, Standard Pay Rate = 1, Double Pay Rate = 2</description>
    <inlineHelpText>Indicates the multiplier required as indicated on the Payee Leave Event i.e. Half Pay Rate = 0.5, Standard Pay Rate = 1, Double Pay Rate = 2</inlineHelpText>
    <label>Leave Rate Multiplier</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>