force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Lump_Sum_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Lump_Sum_Type__c</fullName>
    <description>The Lump Sum Type as defined on the related Pay Code the Payment Summary Classification</description>
    <formula>text(tc9_pr__Pay_Code__r.tc9_pr__Lump_Sum_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Lump Sum Type as defined on the related Pay Code the Payment Summary Classification</inlineHelpText>
    <label>Lump Sum Type</label>
    <type>Text</type>
</CustomField>