force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Marginal_Tax_Periods__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Marginal_Tax_Periods__c</fullName>
    <description>The number of tax periods to be applied during the calculation of marginal earnings and marginal PAYG</description>
    <inlineHelpText>The number of tax periods to be applied during the calculation of marginal earnings and marginal PAYG</inlineHelpText>
    <label>Marginal Tax Periods</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>