force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Override_ATO_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_ATO_Country_Code__c</fullName>
    <description>Override the Country of Visa/Work inherited from the related Payee Pay Batch record.</description>
    <inlineHelpText>Override the Country of Visa/Work inherited from the related Payee Pay Batch record.</inlineHelpText>
    <label>Override ATO Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__STP2_Country_Picklists</valueSetName>
    </valueSet>
</CustomField>