force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Override_ATO_Income_Classification__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_ATO_Income_Classification__c</fullName>
    <description>Indicates that the ATO Income Classification will be overridden and not take from the applicable Payee Pay Batch record for the payee.</description>
    <inlineHelpText>Indicates that the ATO Income Classification will be overridden and not take from the applicable Payee Pay Batch record for the payee.</inlineHelpText>
    <label>Override ATO Income Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__ATO_Income_Classification</valueSetName>
    </valueSet>
</CustomField>