force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The pay batch this pay transaction has been included in</description>
    <inlineHelpText>The pay batch this pay transaction has been included in</inlineHelpText>
    <label>Pay Batch</label>
    <referenceTo>tc9_pr__Pay_Batch__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>