force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Pay_Batch_Item__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payee Pay Batch record the pay transaction has been linked to.</description>
    <inlineHelpText>The Payee Pay Batch record the pay transaction has been linked to.</inlineHelpText>
    <label>Payee Pay Batch</label>
    <referenceTo>tc9_pr__Pay_Batch_Item__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>